48 global consumerlistener (#51)
* New name.

* On hold.

* Un-settled yet.

* After review.