@@ -1,8 +1,6 @@
 package me.ehp246.aufkafka.core.consumer;
 
 import java.time.Duration;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import org.apache.kafka.clients.consumer.Consumer;
@@ -10,9 +8,11 @@ import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import me.ehp246.aufkafka.api.consumer.ConsumerListener;
+import me.ehp246.aufkafka.api.consumer.ConsumerExceptionListener;
+import me.ehp246.aufkafka.api.consumer.InboundConsumerListener;
 import me.ehp246.aufkafka.api.consumer.InvocableDispatcher;
 import me.ehp246.aufkafka.api.consumer.InvocableFactory;
+import me.ehp246.aufkafka.api.consumer.UnmatchedConsumer;
 import me.ehp246.aufkafka.api.exception.UnknownKeyException;
 import me.ehp246.aufkafka.api.spi.MsgMDCContext;
 
@@ -26,39 +26,21 @@ final class ConsumerTask implements Runnable {
     private final Consumer<String, String> consumer;
     private final InvocableDispatcher dispatcher;
     private final InvocableFactory invocableFactory;
-    private final List<ConsumerListener.UnmatchedListener> onUnmatched;
-    private final List<ConsumerListener.ReceivedListener> onReceived;
-    private final List<ConsumerListener.ExceptionListener> onException;
+    private final List<InboundConsumerListener.DispatchingListener> onDispatching;
+    private final UnmatchedConsumer onUnmatched;
+    private final ConsumerExceptionListener onException;
 
     ConsumerTask(final Consumer<String, String> consumer, final InvocableDispatcher dispatcher,
             final InvocableFactory invocableFactory,
-            final List<ConsumerListener> eventListeners) {
+            final List<InboundConsumerListener.DispatchingListener> onDispatching,
+            final UnmatchedConsumer onUnmatched, final ConsumerExceptionListener onException) {
         super();
         this.consumer = consumer;
         this.dispatcher = dispatcher;
         this.invocableFactory = invocableFactory;
-
-        final var onUnmatched = new ArrayList<ConsumerListener.UnmatchedListener>();
-        final var onReceived = new ArrayList<ConsumerListener.ReceivedListener>();
-        final var onException = new ArrayList<ConsumerListener.ExceptionListener>();
-
-        for (final var listener : eventListeners) {
-            switch (listener) {
-                case ConsumerListener.UnmatchedListener l:
-                    onUnmatched.add(l);
-                    break;
-                case ConsumerListener.ReceivedListener l:
-                    onReceived.add(l);
-                    break;
-                case ConsumerListener.ExceptionListener l:
-                    onException.add(l);
-                    break;
-            }
-        }
-
-        this.onUnmatched = Collections.unmodifiableList(onUnmatched);
-        this.onReceived = Collections.unmodifiableList(onReceived);
-        this.onException = Collections.unmodifiableList(onException);
+        this.onDispatching = onDispatching == null ? List.of() : onDispatching;
+        this.onUnmatched = onUnmatched;
+        this.onException = onException;
     }
 
     @Override
@@ -71,7 +53,7 @@ final class ConsumerTask implements Runnable {
 
             for (final var msg : polled) {
                 try (final var closeble = MsgMDCContext.set(msg);) {
-                    this.onReceived.forEach(l -> l.onReceived(msg));
+                    this.onDispatching.stream().forEach(l -> l.onDispatching(msg));
 
                     final var invocable = invocableFactory.get(msg);
 
@@ -79,14 +61,20 @@ final class ConsumerTask implements Runnable {
                         if (onUnmatched == null) {
                             throw new UnknownKeyException(msg);
                         } else {
-                            onUnmatched.stream().forEach(l -> l.onUnmatched(msg));
+                            onUnmatched.accept(msg);
                         }
                     } else {
                         dispatcher.dispatch(invocable, msg);
                     }
                 } catch (Exception e) {
-                    try {
-                        final var exceptionContext = new ConsumerListener.ExceptionListener.ExceptionContext() {
+                    LOGGER.atError().setCause(e)
+                            .setMessage(this.onException.getClass().getSimpleName()
+                                    + " failed, ignored: {}, {}, {} because of {}")
+                            .addArgument(msg::topic).addArgument(msg::key).addArgument(msg::offset)
+                            .addArgument(e::getMessage).log();
+
+                    if (this.onException != null) {
+                        this.onException.onException(new ConsumerExceptionListener.Context() {
 
                             @Override
                             public Consumer<String, String> consumer() {
@@ -94,7 +82,7 @@ final class ConsumerTask implements Runnable {
                             }
 
                             @Override
-                            public ConsumerRecord<String, String> received() {
+                            public ConsumerRecord<String, String> message() {
                                 return msg;
                             }
 
@@ -102,14 +90,7 @@ final class ConsumerTask implements Runnable {
                             public Exception thrown() {
                                 return e;
                             }
-                        };
-                        this.onException.stream().forEach(l -> l.onException(exceptionContext));
-                    } catch (Exception ex) {
-                        LOGGER.atError().setCause(ex)
-                                .setMessage(this.onException.getClass().getSimpleName()
-                                        + " failed, ignored: {}, {}, {} because of {}")
-                                .addArgument(msg::topic).addArgument(msg::key)
-                                .addArgument(msg::offset).addArgument(ex::getMessage).log();
+                        });
                     }
                 }
             }
